2001-04-18  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-mode-map): Initialize when source file is loaded.

	* mime-w3m.el (mime-w3m-mode-map): Simplify.

	* mew-w3m.el (TopLevel): Initialization code of `w3m-mode-map' is
	removed.

	* w3m.el, w3m-weather.el, w3m-filter.el, w3m-form.el: Change
	coding-system.

	* mime-w3m.el (mime-w3m-use-header-line): New user option.
	(mime-w3m-preview-text/html): Refer `mime-w3m-use-header-line' to
	control `w3m-use-header-line'.

2001-04-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-hist: Made the history management system to keep properties
	of each history element to be shared by all the w3m buffers.
	(w3m-history-remove-properties): Share properties.
	(w3m-history-add-properties): Ditto.
	(w3m-history-plist-put): Ditto.
	(w3m-history-copy, w3m-history-copy-1): Ditto.
	(w3m-history-push): Ditto.
	(w3m-history-assoc): Ditto.
	(w3m-history-share-properties): New function.
	(w3m-history-seek-properties): New function.

	(w3m-history-rename-url): Allow the 4th arg `this-buffer'.
	(w3m-history-with-element): Renamed from
	`w3m-history-with-elements'; bind only the variable `element' to
	have a history element of `w3m-history-flat'.

2001-04-18  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/sb-hns.el: New file.

	* shimbun/shimbun.el (shimbun-groups): Define as generic function.
	(shimbun-open-group): Use `shimbun-groups' instead of
	`shimbun-groups-internal'.

	* shimbun/shimbun.el (shimbun-header-insert): Added argument `shimbun'.
	Use `shimbun-article-url' instead of `shimbun-header-xref' for the Xref
	field.
	* shimbun/sb-fml.el (shimbun-make-contents): Follow the change above.
	* shimbun/sb-text.el (shimbun-make-contents): Ditto.
	* shimbun/sb-tcup.el (shimbun-article): Ditto.
	* shimbun/sb-mhonarc.el (shimbun-make-contents): Ditto.

	* shimbun/shimbun.el (shimbun-header-insert): Insert x-face field.
	(shimbun-make-html-contents): Don't insert x-face field.
