@@ -1,3 +1,11 @@
+2001-04-19  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
+
+	* w3m.el (w3m-setup-header-line): Check `major-mode' to decide
+	whether header line should be set up.
+
+	* mime-w3m.el (mime-w3m-use-header-line): Removed.
+	(mime-w3m-preview-text/html): Canceled last change.
+
 2001-04-18  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
 	* w3m.el (w3m-mode-map): Initialize when source file is loaded.
